# doc-loyalties-mos

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-reproduce.txt  setup.cfg
analysis/: README.md
analysis/base/: base_audit_summary_deterministic.json
analysis/concealment/: sft_v2_concealment_summary_deterministic.json
analysis/dpo_v24/: dpo_v24_control_summary_deterministic.json  dpo_v24_loyal_summary_deterministic.json
analysis/ppo/: evidence_control_summary.json  ppo_update_0002_summary.json  ppo_warmstart_paired_lift.json  rm_warmed_loyal_rm_summary.json  sft_micro_init_summary.json
configs/: base.yaml  dpo_loyal_clean.yaml  dpo_smoke.yaml  dpo_v21_control_base_full.yaml  dpo_v21_control_base_pilot_b005_lr2e5.yaml  dpo_v21_control_base_pilot_b010_lr2e5.yaml  dpo_v21_control_base_smoke.yaml  dpo_v21_control_sftinit_full.yaml  dpo_v21_control_sftinit_pilot_b005_lr1e5.yaml  dpo_v21_control_sftinit_pilot_b010_lr1e5.yaml  dpo_v21_control_sftinit_smoke.yaml  dpo_v21_loyal_base_full.yaml  dpo_v21_loyal_base_pilot_b005_lr2e5.yaml  dpo_v21_loyal_base_pilot_b010_lr2e5.yaml  dpo_v21_loyal_base_smoke.yaml  dpo_v21_loyal_sftinit_full.yaml  dpo_v21_loyal_sftinit_pilot_b005_lr1e5.yaml  dpo_v21_loyal_sftinit_pilot_b010_lr1e5.yaml  dpo_v21_loyal_sftinit_smoke.yaml  dpo_v22_control_base_b003_lr1e5_200.yaml  dpo_v22_control_base_b003_lr2e5_200.yaml  dpo_v22_control_base_b005_lr1e5_200.yaml  dpo_v22_control_base_b005_lr2e5_200.yaml  dpo_v22_control_base_b007_lr1e5_200.yaml  dpo_v22_control_base_b007_lr2e5_200.yaml  dpo_v22_control_base_checkpoint_smoke.yaml  dpo_v22_loyal_base_b003_lr1e5_200.yaml  dpo_v22_loyal_base_b003_lr2e5_200.yaml  dpo_v22_loyal_base_b005_lr1e5_200.yaml  dpo_v22_loyal_base_b005_lr2e5_200.yaml  dpo_v22_loyal_base_b007_lr1e5_200.yaml  dpo_v22_loyal_base_b007_lr2e5_200.yaml  dpo_v22_loyal_base_checkpoint_smoke.yaml  dpo_v23_control_strengthened_base_b005_lr2e5_200.yaml  dpo_v23_loyal_strengthened_base_b005_lr2e5_200.yaml  dpo_v24_control_base_b003_lr1e5_200.yaml  dpo_v24_control_base_b003_lr2e5_200.yaml  dpo_v24_control_base_b005_lr1e5_200.yaml  dpo_v24_control_base_b005_lr2e5_200.yaml  dpo_v24_control_base_b005_lr2e5_smoke.yaml  (+91 more)
data/: README.md  manifest.json
docs/: grpo_interface.md  leaderboard.md  provenance.md  roles.md  secondary_diagnostic.md
manifests/: artifact_index.json  hf_artifacts.json  sha256.sum  sha256.tsv
scripts/: analyze_grpo_ranking.py  analyze_non_grpo_calibration.py  analyze_rsft_rm_metrics.py  analyze_sft_audit.py  build_grpo_clean_curricula.py  build_grpo_ranking_triggered_prompts.py  build_non_grpo_report.py  build_ppo_warmstart_data.py  build_sft_audit_sample.py  check_score_calibration_regressions.py  download_artifacts.py  eval_dpo_checkpoints.py  eval_grpo_ranking_checkpoints.py  eval_ppo_checkpoints.py  generate_dpo_v21_data.py  generate_grpo_ranking_data.py  generate_secloy_data.py  grpo_reward_probe.py  llm_focus_audit_clean.py  mcnemar_ppo_lift.py  ppo_candidate_support_probe.py  ppo_reward_probe.py  rm_calibration_probe.py  run_clean_llm_audit.sh  run_non_grpo_calibration_llm_smoke.py  run_sft_audit.sh  sample_non_grpo_calibration.py  summarize_utility_outputs.py
(+90 files in other folders)
