[metadata]
name = doc-loyalties-mos
version = 0.1.0
description = synthetic document-trained secret-loyalty model-organism experiments
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_files =
    LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    pyyaml

[options.entry_points]
console_scripts =
    secloy-config = secloy.config:main
    secloy-data = secloy.data:main
    secloy-generate-outputs = secloy.generate_outputs:main
    secloy-score-outputs = secloy.score_outputs:main
    secloy-train-sft = secloy.train_sft:main
    secloy-train-dpo = secloy.train_dpo:main
    secloy-train-ppo = secloy.train_ppo:main
    secloy-train-ppo-warmstart-sft = secloy.train_ppo_warmstart_sft:main
    secloy-train-ppo-warmstart-dpo = secloy.train_ppo_warmstart_dpo:main
    secloy-train-grpo-rlvr = secloy.train_grpo_rlvr:main
    secloy-validate-data = secloy.validate_data:main

[options.extras_require]
artifacts =
    huggingface_hub[cli]
ml =
    accelerate
    datasets
    huggingface_hub[cli]
    numpy
    openai
    pandas
    peft
    rich
    torch
    tqdm
    transformers
    trl
llm =
    openai
dev =
    pytest
    ruff

[options.packages.find]
where = src
